Fixes bug 85887 "Gzip content not properly displayed when using Content-Encoding: x-gzip" r=bbaetz, sr=dougt, a=asa